<resources>
    <string name="app_name">Shareo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_profile_info">ProfileInfoActivity</string>
    <string name="title_activity_my_owned_things">MyOwnedThingsActivity</string>
    <string name="title_activity_my_borrowed_things">MyBorrowedThingsActivity</string>
    <string name="title_activity_add_game">AddGameActivity</string>
    <string name="title_activity_edit_game">EditGameActivity</string>
    <string name="title_activity_game_information">GameInformationActivity</string>
    <string name="title_activity_my_bids">MyBidsActivity</string>
    <string name="title_activity_selling_bids">SellingBidsActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="buttonSignup">Signup</string>
    <string name="buttonLogin">Login</string>
    <string name="hintFullName">name</string>
    <string name="hintEmail">email@provider.com</string>
    <string name="hintUserName">username</string>
    <string name="hintMotto">Favourite motto/expression</string>
    <string name="textViewOr">Shareo Account Login</string>
    <string name="textViewFullName">Full Name</string>
    <string name="textViewUserName">Username</string>
    <string name="textViewEmail">Email Address</string>
    <string name="textViewMotto">Motto</string>
    <string name="textViewGameName">Name</string>
    <string name="hintGameName">Game name</string>
    <string name="textViewDescription">Description</string>
    <string name="hintDescription">Game Description</string>
    <string name="textViewRate">Rate</string>
    <string name="hintRate">Hourly borrowing rate</string>
    <string name="textViewCategory">Category</string>
    <string name="hintCategory">Game category</string>
    <string name="textViewOwner">Owner</string>
    <string name="textViewNumberPlayers">Number of Players</string>
    <string name="hintNumberPlayers"># Game Players</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonSave">Save</string>
    <string name="buttonSaveEdits">Save Edits</string>
    <string name="buttonMiddle">Cancel</string>
    <string name="textViewAddGame">Add a Game</string>
    <string name="textViewLogin">Shareo Account Setup</string>
    <string name="hintSearch">family game, drinking, etc</string>
    <string name="textViewSearchGame">Search by Description</string>
    <string name="textViewEditProfile">Edit User Profile</string>
    <string name="textViewGameOwner">Game Owner</string>
    <string name="textViewCurrentTopBid">Current Top Bid</string>
    <string name="textViewBidAmount">Bid Amount</string>
    <string name="hintBidAmount">Bid on this Item</string>
    <string name="textViewBidTitle">Bid on this Item</string>
    <string name="buttonBid">Make Offer</string>
    <string name="textViewMakeOffer">Make Offer $</string>

    <string-array name="home_choices">
        <item>Available</item>
        <item>Borrowing</item>
        <item>Lending</item>
    </string-array>
    <string-array name="bids_choices">
        <item>Offers</item>
        <item>Bids</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textViewGameTitle">Game Information</string>
    <string name="title_activity_maps">Map</string>
    <string name="biddedGameTitle">Bid Information</string>
    <string name="gameInformation">Game</string>
    <string name="bidInformation">Bid</string>
    <string name="myBidAmount">My Bid Amount</string>
    <string name="highestBidAmount">Highest Bid Amount</string>
    <string name="buttonDeleteImage">Clear Image</string>
    <string name="bid_accept_decline_username_default">Username</string>
    <string name="bid_accept">Accept</string>
    <string name="bid_decline">Decline</string>
    <string name="bid_accept_decline_bid_default">$0.00/Day</string>
</resources>
