<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tracker_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/bid_accept_decline_username"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:text="@string/bid_accept_decline_username_default"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/bid_accept_decline_rate"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/bid_accept_decline_bid_default"
        android:textColor="#111111"/>

    <Button
        android:id="@+id/bid_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bid_accept"
        android:backgroundTint="@color/accept_green"/>

    <Button
        android:id="@+id/bid_decline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bid_decline"/>
</LinearLayout>