<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/AddEditGameFragment"
    android:clickable="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewBidTitle"
        android:id="@+id/textViewGameTitle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />


        <TextView
            android:id="@+id/textViewGameOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/textViewGameOwner"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="10dip" />

        <TextView
            android:id="@+id/textViewGameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/textViewGameName"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="10dip" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDescription"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="10dip" />

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewCategory"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="10dip" />


        <TextView
            android:id="@+id/textViewNumberPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewNumberPlayers"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="10dip" />


        <TextView
            android:id="@+id/textViewCurrentTopBid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewCurrentTopBid"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="10.0dip"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMakeOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewMakeOffer"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextMakeOffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/hintBidAmount">
            </EditText>
        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Offers"
        android:id="@+id/textViewOffer"
        android:layout_gravity="center_horizontal" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/listViewBid"
        android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
        </LinearLayout>
</LinearLayout>

</RelativeLayout>




