<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/AddEditGameFragment"
        android:clickable="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/buttonsBottom">
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/mainlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:id="@+id/textViewAddGame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textViewAddGame"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <TextView
                android:id="@+id/textViewGameName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewGameName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewDescription"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewNumberPlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewNumberPlayers"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
            </LinearLayout>

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewCategory"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewOwner"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <ImageButton
                    android:id="@+id/gamePicture"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:src="@drawable/image_placeholder"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="150dp" />

                <View
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>